storage/internal/log/exception/exception_2023-09-15.log
2023-09-15 13:30:59 [ERROR] - uncaughtException: document is not defined
ReferenceError: document is not defined
    at setMarker (D:\Code\r-rfms\agros_net_server_node_git\routes\api\api_map.js:100:15)
    at D:\Code\r-rfms\agros_net_server_node_git\routes\api\api_map.js:51:9
    at D:\Code\r-rfms\agros_net_server_node_git\database\obj_db.js:206:12
    at D:\Code\r-rfms\agros_net_server_node_git\utils\postgres_util.js:47:12
    at Query.<anonymous> (D:\Code\r-rfms\agros_net_server_node_git\node_modules\pg-pool\index.js:417:18)
    at Query.handleReadyForQuery (D:\Code\r-rfms\agros_net_server_node_git\node_modules\pg\lib\query.js:138:12)
    at Client._handleReadyForQuery (D:\Code\r-rfms\agros_net_server_node_git\node_modules\pg\lib\client.js:290:19)
    at Connection.emit (node:events:527:28)
    at D:\Code\r-rfms\agros_net_server_node_git\node_modules\pg\lib\connection.js:114:12
    at Parser.parse (D:\Code\r-rfms\agros_net_server_node_git\node_modules\pg-protocol\dist\parser.js:40:17)
2023-09-15 13:33:03 [ERROR] - uncaughtException: Cannot use import statement outside a module
D:\Code\r-rfms\agros_net_server_node_git\public\js\module\fr_map_view_logic_module.js:1
import MapViewModule from './fr_map_view_module.js';
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1033:15)
    at Module._compile (node:internal/modules/cjs/loader:1069:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (D:\Code\r-rfms\agros_net_server_node_git\routes\api\api_map.js:4:16)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
2023-09-15 13:33:36 [ERROR] - uncaughtException: Cannot use import statement outside a module
D:\Code\r-rfms\agros_net_server_node_git\routes\api\api_map.js:4
import mapFirst from "../../public/js/module/fr_map_view_logic_module";
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1033:15)
    at Module._compile (node:internal/modules/cjs/loader:1069:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at initRoutes (D:\Code\r-rfms\agros_net_server_node_git\routes\route_loader.js:33:19)
    at Object.route_loader.init (D:\Code\r-rfms\agros_net_server_node_git\routes\route_loader.js:20:10)
